# Omnidirectional-mobile-Robot-for-intelligent-object-gathering

./: .gitignore  README.md  mecanum_robot.urdf.xacro  requirements.txt
Source_code/: README.md
Source_code/Jetson/: Can_node.cpp
Source_code/Mecanum_robot/: CMakeLists.txt  partitions.csv
Source_code/Mecanum_robot/main/: CMakeLists.txt  idf_component.yml  main.c
Source_code/Mecanum_robot/main/bno055/include/: bno055.h
Source_code/Mecanum_robot/main/bno055/src/: bno055_support.c
Source_code/Mecanum_robot/main/canbus/include/: canbus.h
Source_code/Mecanum_robot/main/canbus/src/: canbus.c
Source_code/Mecanum_robot/main/ekf/include/: ekf.h
Source_code/Mecanum_robot/main/ekf/src/: ekf.c
Source_code/Mecanum_robot/main/i2c_driver/include/: i2c_driver.h
Source_code/Mecanum_robot/main/i2c_driver/src/: i2c_driver.c
Source_code/Mecanum_robot/main/kinematic/include/: kinematic.h
Source_code/Mecanum_robot/main/kinematic/src/: kinematic.c
Source_code/Mecanum_robot/main/mdns_service/include/: mdns_service.h
Source_code/Mecanum_robot/main/mdns_service/src/: mdns_service.c
Source_code/Mecanum_robot/main/motor_control/include/: motor_control.h
Source_code/Mecanum_robot/main/motor_control/src/: motor_control.c
Source_code/Mecanum_robot/main/pmw3901/include/: pmw3901.h
Source_code/Mecanum_robot/main/pmw3901/src/: pmw3901.c
Source_code/Mecanum_robot/main/public_include/: public.h
Source_code/Mecanum_robot/main/socket_handler/include/: message_type.h  socket_handler.h
Source_code/Mecanum_robot/main/socket_handler/src/: socket_handler.c
Source_code/Mecanum_robot/main/spi_driver/include/: spi_driver.h
Source_code/Mecanum_robot/main/spi_driver/src/: spi_driver.c
Source_code/Mecanum_robot/main/storage/include/: nvs_storage.h  spiffs_storage.h
Source_code/Mecanum_robot/main/storage/src/: nvs_storage.c  spiffs_storage.c
Source_code/Mecanum_robot/main/wifi/include/: wifi.h
Source_code/Mecanum_robot/main/wifi/src/: wifi.c
Source_code/Multi_platform_app/Robot_controller/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  GlobalXmlns.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Robot_controller.csproj  Robot_controller.sln
Source_code/Multi_platform_app/Robot_controller/Models/: BNO055Data.cs  Database.cs  EKF.cs  MDNS.cs  MapDrawable.cs  MessageType.cs  Motor_Second_Order_Specs.cs  PMW3901Data.cs  RecordBone.cs  RobotControl.cs  RunSession.cs  Socket_handler.cs  WheelSpeed.cs
Source_code/Multi_platform_app/Robot_controller/Views/: ColorConverter.cs  MotorChart.xaml  MotorChart.xaml.cs
Source_code/STM32_Robot_arm/: .clangd  .mxproject  CMakeLists.txt  STM32_Robot_arm.ioc
Source_code/STM32_Robot_arm/cmake/: gcc-arm-none-eabi.cmake
Source_code/ros2_ws/launch/: packge_launch.yaml
Source_code/ros2_ws/src/cpp_package/: CMakeLists.txt  package.xml
Source_code/ros2_ws/src/cpp_package/config/: slam_params.yaml
Source_code/ros2_ws/src/cpp_package/include/cpp_package/: frontier_based_exploration.h  message_type.h  socket_handler.h  wifi_handler.h
Source_code/ros2_ws/src/cpp_package/src/: explorer_node.cpp  frontier_based_exploration.cpp  socket_handler.cpp  wifi_node.cpp
config/: astra_intrinsics.json
data/eval_dataset/: labels.json
docs/: DEMO_RUNBOOK.md  HANDOFF.md  KLTN_tomtat_va_review_chuong3.md  PLAN_SLAM_NAV2.md  SPEC.md  _vlm_sweep_raw.jsonl  _vram_probe.jsonl  _yolo_raw.jsonl  astra_depth_range.md  astra_noise_vs_distance.csv  astra_noise_vs_distance_corrected.csv  bang_4_1_yolo_performance.json  bang_4_2_vlm_ngpu_sweep.json  bang_4_3_accuracy_results.json  bang_4_3_baseline_comparison.json  bang_4_4_end_to_end.json  bang_4_5_edge_metrics.json  benchmark_results.json  benchmark_results_cpu.json  trigger_timeline.csv
layer1_vision/: README.md  depth_detect.py  depth_utils.py  detection_log.py  vision_node.py
layer1_vision/cameras/: astra_openni.py  test_grab_switch.py
layer2_brain/: README.md  brain_server.py  config.json  setup_vlm.py
layer3_control/: README.md  control_node.py  kinematics.py
ros2_ws/: .gitignore  README.md
ros2_ws/src/astra_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/astra_ros/astra_ros/: astra_color_node.py  astra_node.py  camera_manager.py
ros2_ws/src/base_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/base_bridge/base_bridge/: base_node.py  fake_odom.py  protocol.py  transport.py
ros2_ws/src/base_bridge/test/: test_protocol.py
ros2_ws/src/cpp_package/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_package/config/: nav2_params.yaml
ros2_ws/src/cpp_package/include/cpp_package/: frontier_based_exploration.h  mdns_service.h  message_type.h  socket_handler.h
ros2_ws/src/cpp_package/src/: explorer_node.cpp  frontier_based_exploration.cpp  mdns_service.cpp  socket_handler.cpp  wifi_handler.cpp
ros2_ws/src/cpp_package/test/: fake_esp32.py
ros2_ws/src/robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/robot_bringup/config/: nav2_params.yaml  slam_toolbox.yaml
ros2_ws/src/robot_bringup/launch/: astra_scan.launch.py  bringup.launch.py  collect.launch.py  slam.launch.py  view_foxglove.launch.py  yolo.launch.py
ros2_ws/src/robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/robot_description/launch/: description.launch.py
ros2_ws/src/robot_description/urdf/: robot.urdf.xacro
ros2_ws/src/vlm_nav_orchestrator/: package.xml  setup.cfg  setup.py
ros2_ws/src/vlm_nav_orchestrator/test/: test_geometry.py
ros2_ws/src/vlm_nav_orchestrator/vlm_nav_orchestrator/: geometry.py  orchestrator_node.py
ros2_ws/src/yolo_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/yolo_ros/yolo_ros/: yolo_node.py
scripts/: README.md  bench_vlm_config.py  bench_yolo.py  benchmark.py  eval_accuracy.py  plot_architecture.py  plot_benchmarks.py  probe_vram.py  start_vlm_server.bat  start_vlm_server.sh  verify_setup.py
tools/: README.md  astra_accuracy.py  astra_coord_demo.py  astra_depth_range_report.py  astra_stream.py  capture_eval_dataset.py  demo_doctor.sh  plot_astra_noise.py  plot_trigger_timeline.py  setup_hostapd.sh  test_astra.py
(+2 files in other folders)
