<?xml version="1.0"?>
<package format="3">
  <name>astra_ros</name>
  <version>0.0.1</version>
  <description>Publish Astra depth (mode=depth) as sensor_msgs/Image + CameraInfo, frame camera_depth_optical_frame. Source for depthimage_to_laserscan (SLAM).</description>
  <maintainer email="ndtrung2407@gmail.com">dvbonn</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
