<?xml version="1.0"?>
<package format="3">
  <name>base_bridge</name>
  <version>0.0.1</version>
  <description>ROS2 <-> ESP32 mecanum base bridge: sub /cmd_vel -> SET_ROBOT_VELOCITY (base runs IK+PI), read ROBOT_STATE (EKF pose) -> pub /odom + tf odom->base_link. Transport TCP :2004 (default), CAN stub. See docs/PLAN_SLAM_NAV2.md (T8).</description>
  <maintainer email="ndtrung2407@gmail.com">dvbonn</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
