<?xml version="1.0"?>
<package format="3">
  <name>yolo_ros</name>
  <version>0.0.1</version>
  <description>YOLOv8n as a ROS2 node: receive a color image, publish an annotated image (bgr8) + detections (JSON) to view in Foxglove. Reuses the model/drawing functions from layer1_vision/vision_node. Requires pip: ultralytics + torch + opencv (already installed on the Jetson).</description>
  <maintainer email="ndtrung2407@gmail.com">dvbonn</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
